--- a/src/App.module.css
+++ b/src/App.module.css
@@ -11,6 +11,7 @@ body {
 .image {
   width: 370px;
   margin-top: 50px;
+  
 }
 
 @media only screen and (max-width: 770px) {
@@ -20,5 +21,6 @@ body {
 
   .image {
     width: 100%;
+    animation: spin 8s linear infinite;
   }
 }
